<resources>
    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>
    <string name="user_name_fragment_next_btn">Next</string>
    <string name="app_name">Training supporter</string>
    <string name="name">Training supporter</string>
    <string name="logo">logo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu">menu</string>
    <string name="title">Введите название</string>
    <string name="description">Cложность</string>
    <string name="create_workout">Создание тренировки </string>
    <string name="next">Продолжить</string>
    <string name="workout_title">Название</string>
    <string name="workout_description">Сложность</string>
    <string name="name_exercise">Введите название</string>
    <string name="time">Время</string>
    <string name="instruction">Инструкция</string>
    <string name="create_exercise">Создание упражнения</string>
    <string name="will_exercise_be_for_time_or_for_repeat">Хотите ввести время тренировки?</string>
    <string name="pause">Pause</string>
    <string name="series">Series</string>
    <string name="finish">Finish</string>
    <string name="exercise_details">Exercise Details</string>
    <string name="how_long_pause">How long pause</string>
    <string name="how_many_time">How long time</string>
    <string name="how_many_series">How many series</string>
    <string name="repeat">Повторения</string>
    <string name="how_many_repeat">how many repeat</string>
    <string name="workout_tiitle">Workout Title</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="title_exercise">Title Exercise</string>
    <string name="time_to_end">TIme to end :</string>
    <string name="time_to_end_pause">Time to end pause:</string>
    <string name="plus">+</string>
    <string name="history">History</string>
    <string name="workout">Workout</string>
    <string name="settings">Settings</string>
    <string name="description2">Description :</string>
    <string name="instruction2">Instruction :</string>
    <string name="series2">Series :</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="pause2">Pause :</string>
    <string name="time2">Time :</string>

    <string name="next_exercise">Next exercise:</string>
    <string name="user_name_fragment_title">Как вас зовут?</string>
    <string name="user_name_fragment_input_hint">]Введите имя</string>
    <string name="challenge_fragment_default_time">01:00</string>
    <string name="result_fragment_squats">Squats</string>
    <string name="leaderboard_fragment_title">Leaderboard</string>
    <string name="btn_home_go_to_home">Go home</string>

    <string-array name="time_formats">
        <item>секунды</item>
        <item>минуты</item>
    </string-array>
    <string-array name="difficult">
        <item>Легко</item>
        <item>Средне</item>
        <item>Сложно</item>
        <item>Очень сложно</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search" />
    <string name="tfe_pn_request_permission">request</string>
    <string name="fragment_exercises_select_challenge" />
    <string name="welcome_fragment_title">Privet</string>
    <string name="welcome_fragment_start_btn">Darova</string>
    <string name="welcome_fragment_leaderboard_btn">Privet</string>
</resources>
