<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".workout.CreateWorkoutActivity">

    <TextView
        android:id="@+id/title_text_view_set_activition"
        style="@style/TextViewCreator"
        android:layout_width="232dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creator_text_view" />

    <TextView
        android:id="@+id/description_text_view_set_activity"
        style="@style/TextViewCreator"
        android:layout_width="232dp"
        android:layout_height="38dp"
        android:layout_marginTop="64dp"
        android:text="@string/description"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_edit_text_set_activity" />

    <TextView
        android:id="@+id/creator_text_view"
        style="@style/TextViewCreator"
        android:layout_width="329dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_workout"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title_edit_text_set_activity"
        android:layout_width="219dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/workout_title"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view_set_activition"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/desription_edit_text_set_activity"
        android:layout_width="201dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/workout_description"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view_set_activity" />

    <Button
        android:id="@+id/next_button_set_activity"
        style="@style/ButtonCreator"
        android:layout_width="234dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="next"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desription_edit_text_set_activity"
        app:layout_constraintVertical_bias="0.889" />
</androidx.constraintlayout.widget.ConstraintLayout>