<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercise.CreateExerciseActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/exercise_title_text_view"
        style="@style/TextViewCreator"
        android:layout_width="266dp"
        android:layout_height="39dp"
        android:layout_marginTop="60dp"
        android:text="@string/name_exercise"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/exercise_instruction_text_view"
        style="@style/TextViewCreator"
        android:layout_width="271dp"
        android:layout_height="46dp"
        android:layout_marginTop="72dp"
        android:text="Введите инструкцию"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_title_edit_text" />

    <EditText
        android:id="@+id/exercise_title_edit_text"
        android:layout_width="210dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="Название"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_title_text_view"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/exercise_instruction_edit_text"
        android:layout_width="191dp"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/instruction"
        android:inputType="text|textMultiLine"
        android:lines="7"
        android:maxLines="7"
        android:minLines="6"
        android:singleLine="false"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_instruction_text_view"
        tools:targetApi="o" />

    <Spinner
        android:id="@+id/diffspinner"
        style="@style/TextViewCreator"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/radio_group"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_instruction_edit_text" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="216dp"
        android:layout_height="91dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_instruction_edit_text">

        <RadioButton
            android:id="@+id/radio_button_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Повторения"
            android:textColor="#0E0C0C"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="490dp" />

        <RadioButton
            android:id="@+id/radio_button_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="По времени"
            android:textColor="#15100F"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/next_exercise_activity"
        style="@style/ButtonCreator"
        android:layout_width="234dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="nextExercise"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/textView13"
        style="@style/TextViewCreator"
        android:layout_width="331dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_exercise"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>